--- a/app/css/app.css
+++ b/app/css/app.css
@@ -28,3 +28,55 @@
   content: "";
   padding: 0;
 }
+
+/* svg style start */
+body{
+  font-family: "Helvetica Neue"
+}
+
+h2{
+  font-weight: normal;
+  margin: 0;
+}
+
+.chart{
+  width: 900px;
+  height: 450px;
+  border-radius: 8px;
+  overflow: hidden;
+}
+
+.chart__header{
+  position: relative;
+  background: #8eba45;
+  color: #fff;
+  padding: 0 5px;
+}
+
+.chart__icon{
+  position: absolute;
+  font-size: 25px;
+  right: 5px;
+  top: 0;
+}
+
+.chart__content{
+  background: #b6e356;
+}
+
+.chart__line{
+  fill: none;
+  stroke: #fff;
+  stroke-width: 2px;
+}
+
+.chart__circle{
+  fill: #fff;
+  radius: 5px;  
+}
+
+.chart__pie{
+  stroke: #000;
+  stroke-width: 2px;
+}
+
